# javv-poc

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REPO-MAP.md  commitlint.config.mjs  release-please-config.json  renovate.json  versions.yaml
.claude/: settings.json
.serena/: project.yml
backend/: README.md  cookies.txt  pyproject.toml
backend/src/backend/: __init__.py  main.py
backend/src/backend/admin/: report_ttl.py  scan_scope.py  snapshot.py
backend/src/backend/audit/: writer.py
backend/src/backend/auth/: audit.py  bootstrap_admin.py  capabilities.py  lockout.py  passwords.py  principal.py  providers.py  sessions.py
backend/src/backend/core/: auth.py  bootstrap.py  errors.py  identifiers.py  lifespan.py  logging.py  metrics.py  security.py  settings.py  tokens.py
backend/src/backend/decisions/: lifecycle.py  projection.py  reproject.py
backend/src/backend/export/: audit_csv.py  csv_stream.py  sweep.py  vex.py
backend/src/backend/jobs/: findings_cleanup.py  lease.py  lifecycle.py  rebuild_state.py  report_drain.py  report_sweep.py  staleness.py
backend/src/backend/models/: envelope.py
backend/src/backend/query/: aggs.py  approvals.py  as_of.py  as_of_t.py  audit.py  contributors.py  human_at.py  paging.py  pit.py  pit_guard.py  search.py  trends.py
backend/src/backend/reports/: claim.py  download_token.py  lease.py  models.py  storage.py
backend/src/backend/repositories/: bulk.py
backend/src/backend/routers/: admin_jobs.py  admin_users.py  audit.py  auth.py  clusters.py  contributors.py  data_settings.py  decisions.py  exports.py  findings.py  health.py  images.py  ingest.py  inspect.py  inventory_runs.py  metrics.py  notifications.py  reports.py  scan_runs.py  scan_scope.py  scanners.py  staleness_settings.py  tokens.py  trends.py  triage.py  views.py
backend/src/backend/services/: aliases.py  disagreement.py  ingest.py  merge.py  reconcile.py  scan_orders.py  sla_clock.py  watermarks.py
backend/src/backend/sla/: overdue.py  policy.py  routes.py
backend/src/backend/snapshots/: inventory_runs.py  occurrences.py
backend/src/backend/tenancy/: chokepoint.py
backend/src/backend/tools/: export_openapi.py
backend/src/backend/triage/: bulk.py  bulk_routes.py  service.py  state_machine.py
backend/tests/: conftest.py  os_env.py  test_admin_jobs.py  test_admin_users.py  test_aliases.py  test_as_of_dispatch.py  test_as_of_t_reader.py  test_as_of_t_trends.py  test_audit_route.py  test_audit_writer.py  test_auth_hardening.py  test_auth_routes.py  test_bootstrap.py  test_bulk_freeze.py  test_bulk_triage.py  test_capabilities.py  test_chaos.py  test_clusters_route.py  test_commit_race_keystone.py  test_contributors_route.py  test_decision_projection.py  test_decision_routes.py  test_decisions.py  test_disagreement.py  test_export_csv.py  test_export_csv_route.py  test_export_vex.py  test_export_vex_route.py  test_findings_cleanup.py  test_findings_route.py  test_health.py  test_human_at.py  test_identifiers.py  test_images_route.py  test_ingest_contract_doc.py  test_ingest_model.py  test_ingest_route.py  test_inspect_route.py  test_inventory_runs.py  test_jobs_lease.py  (+50 more)
backend/tests/fixtures/: csv-bait-findings.json  csv-bait-golden.csv  envelope-trivy-golden.json  envelope-trivy-v3-golden.json  findings-seed-golden.json  vex-cyclonedx-golden.json  vex-findings.json  vex-openvex-golden.json  view-preset-golden.json
backend/tests/security/: test_rbac_idor_contract.py
design/: LOGO-PROMPT.md  README.md
design & UI/: README.md
design_handoff_javv/: README.md
development/: AUDIT.md  README.md  RUNNING-THE-STACK.md  opensearch-dev.yml  preflight.sh  setup-dev.sh
docs/: API.md  CONFIGURATION.md  INGEST-CONTRACT.md  audit-2026-07-03-m3.md  ingest-envelope.schema.json
frontend/: .gitignore  .stylelintrc.json  DESIGN.md  eslint.config.ts  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
libs/javv-common/: pyproject.toml
libs/javv-common/src/javv_common/: __init__.py  logging.py
libs/javv-common/tests/: test_logging.py
scanner/: Dockerfile.grype  Dockerfile.trivy  README.md  docker-bake.hcl  pyproject.toml  scanner-versions.json
scanner/src/scanner/: __init__.py  __main__.py  compat.py  config.py  discovery.py  envelope.py  inventory.py  models.py  normalize.py  orders.py  push.py  run.py  scope.py
scanner/src/scanner/adapters/: __init__.py  grype.py  trivy.py
scanner/tests/: test_adapters.py  test_compat.py  test_discovery.py  test_envelope.py  test_inventory.py  test_live_verify.py  test_normalize.py  test_orders.py  test_push.py  test_run.py  test_scan_config.py  test_scope.py  test_smoke.py
scanner/tests/fixtures/: README.md  grype-alpine-3.14.json  grype-python-3.9.16-slim.json  trivy-alpine-3.14.json  trivy-python-3.9.16-slim.json  trivy-version.json
(+440 files in other folders)
