[project]
name = "javv-backend"
version = "0.1.0"
description = "JAVV backend — FastAPI (async) + AsyncOpenSearch ingest/read API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "opensearch-py[async]>=2.6",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.4",
    "structlog>=24",
    "prometheus-client>=0.25.0",
    "argon2-cffi>=25.1.0",
    "javv-common",
]

[tool.uv.sources]
javv-common = { path = "../libs/javv-common", editable = true }

[dependency-groups]
dev = [
    # ruff/pyright pinned exactly — single source is versions.yaml (D42 phase 2).
    "pyright==1.1.411",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff==0.15.20",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    # store-exclusive tests: they mutate GLOBAL store state other tests depend on (e.g. disable
    # every enabled admin), so they poison concurrent tests under -n N. CI runs them in a
    # separate serial step (`-m serial` after `-n 2 -m "not serial"`); a plain local `pytest`
    # is serial anyway and runs everything.
    "serial: must not run concurrently with other tests (global store mutation)",
]
