[project]
name = "javv-scanner"
version = "0.1.0"
description = "JAVV in-cluster vulnerability scanner — Trivy + Grype, per-scanner, never merged."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "httpx>=0.27",
    "kubernetes>=31.0",
    "javv-common",
]

[tool.uv.sources]
javv-common = { path = "../libs/javv-common", editable = true }

[dependency-groups]
dev = [
    # ruff/pyright pinned exactly — single source is versions.yaml (D42 phase 2),
    # drift-checked by development/scripts/check-versions.sh. Bump there, then --fix.
    "pyright==1.1.411",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff==0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanner"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
