[project]
name = "javv-common"
version = "0.1.0"
description = "JAVV shared internals — the one structlog/redaction pipeline every component uses."
requires-python = ">=3.12"
dependencies = [
    "structlog>=24",
]

[dependency-groups]
dev = [
    # ruff/pyright pinned exactly — single source is versions.yaml (D42 phase 2),
    # drift-checked by development/scripts/check-versions.sh. Bump there, then --fix.
    "pyright==1.1.411",
    "pytest>=8",
    "ruff==0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/javv_common"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
